--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY= 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
+
